# raid-c

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  raid_8h.html  raid_8h__dep__incl.dot  raid_8h__dep__incl.md5  raid_8h__incl.dot  raid_8h__incl.md5  raid_8h_source.html  raid__internal_8h_source.html  structraid__client-members.html  structraid__client.html  structraid__client__coll__graph.dot  structraid__client__coll__graph.md5  structraid__reader-members.html  structraid__reader.html  structraid__request-members.html  structraid__request.html  structraid__request__coll__graph.dot  structraid__request__coll__graph.md5  structraid__socket-members.html  structraid__socket.html  structraid__writer-members.html  structraid__writer.html
docs/html/search/: all_0.js  classes_0.js  enums_0.js  functions_0.js  searchdata.js  typedefs_0.js
docs/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  raid_8h.tex  raid_8h.tex.tmp  raid_8h__dep__incl.dot  raid_8h__dep__incl.md5  raid_8h__incl.dot  raid_8h__incl.md5  refman.tex  structraid__client.tex  structraid__client.tex.tmp  structraid__client__coll__graph.dot  structraid__client__coll__graph.md5  structraid__reader.tex  structraid__request.tex  structraid__request__coll__graph.dot  structraid__request__coll__graph.md5  structraid__socket.tex  structraid__writer.tex
src/: CMakeLists.txt  raid.h  raid_client.c  raid_client.h  raid_error.c  raid_error.h  raid_internal.h  raid_memory.c  raid_read.c  raid_read.h  raid_request_group.c  raid_socket.c  raid_socket.h  raid_write.c  raid_write.h
test/: CMakeLists.txt  hcs_test.c  raid_test.c  raid_test.c~  test_config.h.example  test_config.h.example~  test_config.h~
